--- a/bot/server_py.ipynb
+++ b/bot/server_py.ipynb
@@ -103,7 +103,7 @@
         "import os\n",
         "from telebot import types # для указание типов\n",
         "\n",
-        "API_TOKEN = '5554528885:AAF0QdnB1KeUHKsgIhoINp-2XdjGzxv8a6U'\n",
+        "API_TOKEN = #PUT YOUR API TOKEN HERE#\n",
         "\n",
         "bot = telebot.TeleBot(API_TOKEN)\n",
         "\n",
