--- a/bot/server_py.ipynb
+++ b/bot/server_py.ipynb
@@ -101,7 +101,7 @@
         "\n",
         "import telebot\n",
         "import os\n",
-        "from telebot import types # для указание типов\n",
+        "from telebot import types\n",
         "\n",
         "API_TOKEN = #PUT YOUR API TOKEN HERE#\n",
         "\n",
