--- a/bot/server_py.ipynb
+++ b/bot/server_py.ipynb
@@ -50,7 +50,7 @@
         "import os\n",
         "from telebot import types \n",
         "\n",
-        "API_TOKEN = '5554528885:AAF0QdnB1KeUHKsgIhoINp-2XdjGzxv8a6U'\n",
+        "API_TOKEN = # PUT YOUR API TOKEN #\n",
         "\n",
         "bot = telebot.TeleBot(API_TOKEN)\n",
         "\n",
